styles/Login.module.css
.allRenderedComps {
	position: relative;
}

.relativeWrapper {
	position: relative;
}
.wrapper {
	position: relative;
}

.loginContainer {
	color: #ffffff;
	margin: 30px;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.auth {
	margin-top: 10px;
	width: 500px;
}
.title {
	border-bottom: 3px solid #192734;
	padding: 0px 65px 22px 65px;
}
.topExplaination {
	margin-bottom: 30px;
	padding-top: 10px;
}
.explaination {
	border-bottom: 3px solid #192734;
	padding: 0px 65px 22px 65px;
	margin-top: 50px;
}
.picture {
	border: 4px solid #ffffff !important;
	box-shadow: black 0px 5px 5px;
	border-radius: 5px;
}

@media screen and (max-width: 590px) {
	.loginContainer {
		margin: 20px;
		margin-top: 30px;
	}
	.title {
		font-size: 20px;
		padding: 0px 0px 22px 0px;
	}
	.topExplaination {
		margin-top: 20px;
		font-size: 15px;
	}
	.explaination {
		padding: 0px 0px 22px 0px;
		margin-top: 30px;
		font-size: 15px;
		text-align: center;
	}
}

